--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -20,6 +20,9 @@
     <div class="kenki-toc-item <%= 'active' if controller.controller_name == 'products' %>">
       <a href="/products" class="kenki-toc-link">商品</a>
     </div>
+    <div class="kenki-toc-item <%= 'active' if controller.controller_name == 'stock_products' %>">
+      <a href="/stock_products" class="kenki-toc-link">自社在庫</a>
+    </div>
     <div class="kenki-toc-item">
       <div class="kenki-toc-text">属性</div>
       <ul class="nav kenki-sub-nav">
