--- a/app/views/api_test/index.html.erb
+++ b/app/views/api_test/index.html.erb
@@ -35,10 +35,10 @@
         <div class="col-sm-10">
           <div class="row" v-for="(param, index) in params">
             <div class="col-sm-5">
-              <input id="token" type="text" placeholder="Key" class="form-control">
+              <input id="token" type="text" placeholder="Key" class="form-control" v-model="param.key">
             </div>
             <div class="col-sm-5">
-              <input id="token" type="text" placeholder="Value" class="form-control">
+              <input id="token" type="text" placeholder="Value" class="form-control" v-model="param.value">
             </div>
             <div class="col-sm-2">
               <button type="button" class="btn btn-link" @click=delParam(index)>-Del</button>
@@ -104,7 +104,7 @@ var app = new Vue({
         }
       }
       $.ajax({
-        url: `${location.origin}/${this.path}`,
+        url: `${location.origin}/${this.path[0] == "/" ? this.path.slice(1) : this.path}`,
         type: this.method,
         headers: headers,
         data: data,
