--- a/app/views/api_test/index.html.erb
+++ b/app/views/api_test/index.html.erb
@@ -24,21 +24,21 @@
           </select>
         </div>
       </div>
-<%#      <div class="form-group row">%>
-<%#        <label for="token" class="col-sm-2 col-form-label">Token</label>%>
-<%#        <div class="col-sm-10">%>
-<%#          <input id="token" type="text" placeholder="Token" class="form-control" v-model="token">%>
-<%#        </div>%>
-<%#      </div>%>
+      <div class="form-group row">
+        <label for="token" class="col-sm-2 col-form-label">Token</label>
+        <div class="col-sm-10">
+          <input id="token" type="text" placeholder="Token" class="form-control" v-model="token">
+        </div>
+      </div>
       <div class="form-group row">
         <label for="params" class="col-sm-2 col-form-label">Parameters</label>
         <div class="col-sm-10">
           <div class="row" v-for="(param, index) in params">
             <div class="col-sm-5">
-              <input id="token" type="text" placeholder="Key" class="form-control" v-model="param.key">
+              <input id="param[key]" type="text" placeholder="Key" class="form-control" v-model="param.key">
             </div>
             <div class="col-sm-5">
-              <input id="token" type="text" placeholder="Value" class="form-control" v-model="param.value">
+              <input id="param[value]" type="text" placeholder="Value" class="form-control" v-model="param.value">
             </div>
             <div class="col-sm-2">
               <button type="button" class="btn btn-link" @click=delParam(index)>-Del</button>
