--- a/app/views/stock_products/_form.html.erb
+++ b/app/views/stock_products/_form.html.erb
@@ -4,7 +4,7 @@
   <%= link_to '<戻る', stock_products_path, class: 'btn btn-outline-primary', style: 'margin-bottom: 10px' %>
     <h3><%= title %></h3>
 
-  <%= render "product", product: @product if @product %>
+  <%= render "stock_products/product", product: @product if @product %>
 
   <div class="clearfix">
     <%= render('shared/validation_alert', model: stock_product) if stock_product.errors.any? %>
@@ -14,10 +14,10 @@
     <h5>サブカテゴリ</h5>
     <div id="product_sub_categories">
       <%= f.simple_fields_for :stock_product_sub_categories do |stock_product_sub_category| %>
-        <%= render 'stock_product_sub_category_fields', f: stock_product_sub_category %>
+        <%= render 'stock_products/stock_product_sub_category_fields', f: stock_product_sub_category %>
       <% end %>
       <div class="links">
-        <%= link_to_add_association 'サブカテゴリ追加', f, :stock_product_sub_categories, class: 'btn btn-secondary' %>
+        <%= link_to_add_association 'サブカテゴリ追加', f, :stock_product_sub_categories, partial: 'stock_products/stock_product_sub_category_fields', class: 'btn btn-secondary' %>
       </div>
     </div>
     <br>
@@ -48,30 +48,30 @@
     <h5>関連リンク</h5>
     <div id="product_text_props">
       <%= f.simple_fields_for :stock_product_text_props do |stock_product_text_prop| %>
-        <%= render 'stock_product_text_prop_fields', f: stock_product_text_prop %>
+        <%= render 'stock_products/stock_product_text_prop_fields', f: stock_product_text_prop %>
       <% end %>
       <div class="links">
-        <%= link_to_add_association '関連リンク追加', f, :stock_product_text_props, class: 'btn btn-secondary' %>
+        <%= link_to_add_association '関連リンク追加', f, :stock_product_text_props, partial: 'stock_products/stock_product_text_prop_fields', class: 'btn btn-secondary' %>
       </div>
     </div>
     <br>
     <h5>ダウンロードファイル</h5>
     <div id="product_file_props">
       <%= f.simple_fields_for :stock_product_file_props do |stock_product_file_prop| %>
-        <%= render 'stock_product_file_prop_fields', f: stock_product_file_prop %>
+        <%= render 'stock_products/stock_product_file_prop_fields', f: stock_product_file_prop %>
       <% end %>
       <div class="links">
-        <%= link_to_add_association 'ダウンロードファイル追加', f, :stock_product_file_props, class: 'btn btn-secondary' %>
+        <%= link_to_add_association 'ダウンロードファイル追加', f, :stock_product_file_props, partial: 'stock_products/stock_product_file_prop_fields', class: 'btn btn-secondary' %>
       </div>
     </div>
     <br>
     <h5>画像ファイル</h5>
     <div id="product_image_props">
       <%= f.simple_fields_for :stock_product_image_props do |stock_product_image_prop| %>
-        <%= render 'stock_product_image_prop_fields', f: stock_product_image_prop %>
+        <%= render 'stock_products/stock_product_image_prop_fields', f: stock_product_image_prop %>
       <% end %>
       <div class="links">
-        <%= link_to_add_association '画像ファイル追加', f, :stock_product_image_props, class: 'btn btn-secondary' %>
+        <%= link_to_add_association '画像ファイル追加', f, :stock_product_image_props, partial: 'stock_products/stock_product_image_prop_fields', class: 'btn btn-secondary' %>
       </div>
     </div>
     <br>
