--- a/app/views/stock_products/edit.html.erb
+++ b/app/views/stock_products/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render 'form', stock_product: @stock_product, title: "#{StockProduct.model_name.human}編集" %>
+<%= render 'stock_products/form', stock_product: @stock_product, title: "#{StockProduct.model_name.human}編集" %>
