--- a/app/views/stock_products/new.html.erb
+++ b/app/views/stock_products/new.html.erb
@@ -1,2 +1,2 @@
-<%= render 'form', stock_product: @stock_product, title: "新規#{StockProduct.model_name.human}" %>
+<%= render 'stock_products/form', stock_product: @stock_product, title: "新規#{StockProduct.model_name.human}" %>
 
