--- a/app/views/stock_products/_stock_product_text_prop_fields.html.erb
+++ b/app/views/stock_products/_stock_product_text_prop_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields form-group row">
   <div class="col-md-6">
-    <%= f.collection_select :stored_prop, TextProp.accessible_by(current_ability), :id, :name, {prompt: ''}, class: 'form-control' %>
+    <%= f.collection_select :stored_prop_id, TextProp.accessible_by(current_ability), :id, :name, {prompt: ''}, class: 'form-control' %>
   </div>
   <div class="col-md-2">
     <%= f.input :published %>
