--- a/app/views/stock_products/_form.html.erb
+++ b/app/views/stock_products/_form.html.erb
@@ -49,53 +49,36 @@
     <h5>関連リンク</h5>
     <div>
       <div class="form-group row" v-for="(sptp, index) in stock_product_text_props" v-show="!sptp._destroy">
-        <div class="col-md-3">
-          <div class="form-group row string required form-group-valid">
-            <label for="stock_product_stock_product_text_props_attributes_{{index}}_stored_prop_attributes_name" class="col-sm-3 col-form-label string required">
-              タイトル <abbr title="required">
-                *</abbr>
-            </label>
-            <div class="col-sm-9">
-              <input type="text" v-model="sptp.stored_prop.name" name="stock_product[stock_product_text_props_attributes][{{index}}][stored_prop_attributes][name]" id="stock_product_stock_product_text_props_attributes_{{index}}_stored_prop_attributes_name" class="form-control is-valid string required" :readonly="sptp.charterable">
-            </div>
-          </div>
+        <div class="col-md-4">
+          <input type="text" placeholder="タイトル" v-model="sptp.stored_prop.name" :name="`stock_product[stock_product_text_props_attributes][${index}][stored_prop_attributes][name]`" class="form-control is-valid string required" :readonly="charter && sptp.charterable">
         </div>
-        <div class="col-md-3">
-          <div class="form-group row text required stock_product_stock_product_text_props_stored_prop_text_content form-group-valid">
-            <label for="stock_product_stock_product_text_props_attributes_{{index}}_stored_prop_attributes_text_content" class="col-sm-3 col-form-label text required">
-              URL <abbr title="required">
-                *</abbr>
-            </label>
-            <div class="col-sm-9">
-              <textarea name="stock_product[stock_product_text_props_attributes][{{index}}][stored_prop_attributes][text_content]" id="stock_product_stock_product_text_props_attributes_{{index}}_stored_prop_attributes_text_content" class="form-control is-valid text required" v-model="sptp.stored_prop.url" :readonly="sptp.charterable"> </textarea>
-            </div>
-          </div>
+        <div class="col-md-4">
+          <textarea placeholder="URL" :name="`stock_product[stock_product_text_props_attributes][${index}][stored_prop_attributes][text_content]`" class="form-control is-valid text required" v-model="sptp.stored_prop.url" :readonly="charter && sptp.charterable"> </textarea>
         </div>
         <div class="col-md-2">
           <fieldset class="form-group boolean optional stock_product_stock_product_text_props_published">
             <div class="form-check">
               <input name="stock_product[stock_product_text_props_attributes][{{index}}][published]" type="hidden" value="0">
-              <input type="checkbox" v-model="sptp.published" name="stock_product[stock_product_text_props_attributes][{{index}}][published]" id="stock_product_stock_product_text_props_attributes_{{index}}_published" class="form-check-input boolean optional">
-              <label for="stock_product_stock_product_text_props_attributes_{{index}}_published" class="form-check-label boolean optional">
+              <input type="checkbox" v-model="sptp.published" :name="`stock_product[stock_product_text_props_attributes][${index}][published]`" :id="`stock_product_stock_product_text_props_attributes_${index}_published`" class="form-check-input boolean optional">
+              <label :for="`stock_product_stock_product_text_props_attributes_${index}_published`" class="form-check-label boolean optional">
                 公開</label>
             </div>
           </fieldset>
-        </div>
-        <div class="col-md-2">
           <fieldset class="form-group boolean optional stock_product_stock_product_text_props_charterable">
-            <div class="form-check">
+            <div v-if="sptp.charterable || !charter" class="form-check">
               <input name="stock_product[stock_product_text_props_attributes][{{index}}][charterable]" type="hidden" value="0">
-              <input type="checkbox" v-model="sptp.charterable" name="stock_product[stock_product_text_props_attributes][{{index}}][charterable]" id="stock_product_stock_product_text_props_attributes_{{index}}_charterable" class="form-check-input boolean optional" :readonly="sptp.charterable">
-              <label for="stock_product_stock_product_text_props_attributes_{{index}}_charterable" class="form-check-label boolean optional">
+              <input type="checkbox" v-model="sptp.charterable" :name="`stock_product[stock_product_text_props_attributes][${index}][charterable]`" :id="`stock_product_stock_product_text_props_attributes_${index}_charterable`" class="form-check-input boolean optional" :disabled="sptp.charterable">
+              <label :for="`stock_product_stock_product_text_props_attributes_${index}_charterable`" class="form-check-label boolean optional">
                 提供</label>
+              <input v-model="sptp.charterable" v-if="sptp.charterable" :name="`stock_product[stock_product_text_props_attributes][${index}][id]`" type="hidden">
             </div>
           </fieldset>
         </div>
         <div class="col-md-2">
-          <input v-model="sptp._destroy" type="hidden" name="stock_product[stock_product_text_props_attributes][{{index}}][_destroy]" id="stock_product_stock_product_text_props_attributes_{{index}}__destroy">
+          <input v-model="sptp._destroy" type="hidden" :name="`stock_product[stock_product_text_props_attributes][${index}][_destroy]`" :id="`stock_product_stock_product_text_props_attributes_${index}__destroy`">
           <a href="javascript:void(0);" class="btn btn-danger dynamic" @click="removeTextProp(sptp, index)">削除</a>
         </div>
-        <input v-model="sptp.id" name="stock_product[stock_product_text_props_attributes][{{index}}][id]" type="hidden">
+        <input v-model="sptp.id" :name="`stock_product[stock_product_text_props_attributes][${index}][id]`" type="hidden">
       </div>
       <div class="links">
         <a href="javascript:void(0);" class="btn btn-secondary" @click="addTextProp">関連リンク追加</a>
@@ -103,22 +86,84 @@
     </div>
     <br>
     <h5>ダウンロードファイル</h5>
-    <div id="product_file_props">
-      <%= f.simple_fields_for :stock_product_file_props do |stock_product_file_prop| %>
-        <%= render 'stock_products/stock_product_file_prop_fields', f: stock_product_file_prop %>
-      <% end %>
+    <div>
+      <div class="form-group row" v-for="(spfp, index) in stock_product_file_props" v-show="!spfp._destroy">
+        <div class="col-md-4">
+          <input type="text" placeholder="タイトル" v-model="spfp.stored_prop.name" :name="`stock_product[stock_product_file_props_attributes][${index}][stored_prop_attributes][name]`" :id="`stock_product_stock_product_file_props_attributes_${index}_stored_prop_attributes_name`" class="form-control is-valid string required" :readonly="charter && spfp.charterable">
+        </div>
+        <div class="col-md-4">
+          <div>{{ displayFileName(spfp) }}</div>
+          <button v-show="!charter || !spfp.charterable" type="button" class="btn btn-primary" @click="uploadFile(spfp, index)">アップロード</button>
+          <input :id="`file_prop_file_${index}`" v-model="spfp.stored_prop.file" class="form-control-file file optional" type="file" :name="`stock_product[stock_product_file_props_attributes][${index}][file]`" style="display: none;" @change="onFileChange($event, spfp, index)">
+        </div>
+        <div class="col-md-2">
+          <fieldset class="form-group boolean optional stock_product_stock_product_file_props_published">
+            <div class="form-check">
+              <input :name="`stock_product[stock_product_file_props_attributes][${index}][published]`" type="hidden" value="0">
+              <input type="checkbox" v-model="spfp.published" :name="`stock_product[stock_product_file_props_attributes][${index}][published]`" :id="`stock_product_stock_product_file_props_attributes_${index}_published`" class="form-check-input boolean optional">
+              <label :for="`stock_product_stock_product_file_props_attributes_${index}_published`" class="form-check-label boolean optional">
+                公開</label>
+            </div>
+          </fieldset>
+          <fieldset class="form-group boolean optional stock_product_stock_product_file_props_charterable">
+            <div v-if="spfp.charterable || !charter" class="form-check">
+              <input :name="`stock_product[stock_product_file_props_attributes][${index}][charterable]`" type="hidden" value="0">
+              <input type="checkbox" v-model="spfp.charterable" :name="`stock_product[stock_product_file_props_attributes][${index}][charterable]`" :id="`stock_product_stock_product_file_props_attributes_${index}_charterable`" class="form-check-input boolean optional" :disabled="spfp.charterable">
+              <label :for="`stock_product_stock_product_file_props_attributes_${index}_charterable`" class="form-check-label boolean optional">
+                提供</label>
+              <input v-model="spfp.charterable" v-if="spfp.charterable" :name="`stock_product[stock_product_file_props_attributes][${index}][id]`" type="hidden">
+            </div>
+          </fieldset>
+        </div>
+        <div class="col-md-2">
+          <input v-model="spfp._destroy" type="hidden" :name="`stock_product[stock_product_file_props_attributes][${index}][_destroy]`" :id="`stock_product_stock_product_file_props_attributes_${index}__destroy`">
+          <a href="javascript:void(0);" class="btn btn-danger dynamic" @click="removeFileProp(spfp, index)">削除</a>
+        </div>
+        <input v-model="spfp.id" :name="`stock_product[stock_product_file_props_attributes][${index}][id]`" type="hidden">
+      </div>
       <div class="links">
-        <%= link_to_add_association 'ダウンロードファイル追加', f, :stock_product_file_props, partial: 'stock_products/stock_product_file_prop_fields', class: 'btn btn-secondary' %>
+        <a href="javascript:void(0);" class="btn btn-secondary" @click="addFileProp">ダウンロードファイル追加</a>
       </div>
     </div>
     <br>
     <h5>画像ファイル</h5>
-    <div id="product_image_props">
-      <%= f.simple_fields_for :stock_product_image_props do |stock_product_image_prop| %>
-        <%= render 'stock_products/stock_product_image_prop_fields', f: stock_product_image_prop %>
-      <% end %>
+    <div>
+      <div class="form-group row" v-for="(spip, index) in stock_product_image_props" v-show="!spip._destroy">
+        <div class="col-md-4">
+          <input type="text" placeholder="タイトル" v-model="spip.stored_prop.name" :name="`stock_product[stock_product_image_props_attributes][${index}][stored_prop_attributes][name]`" :id="`stock_product_stock_product_image_props_attributes_${index}_stored_prop_attributes_name`" class="form-control is-valid string required" :readonly="charter && spip.charterable">
+        </div>
+        <div class="col-md-4">
+          <div>{{ displayFileName(spip) }}</div>
+          <button v-show="!charter || !spip.charterable" type="button" class="btn btn-primary" @click="uploadImage(spip, index)">アップロード</button>
+          <input :id="`image_prop_image_${index}`" v-model="spip.stored_prop.image" class="form-control-file file optional" type="file" :name="`stock_product[stock_product_image_props_attributes][${index}][image]`" style="display: none;" @change="onFileChange($event, spip, index)">
+        </div>
+        <div class="col-md-2">
+          <fieldset class="form-group boolean optional stock_product_stock_product_image_props_published">
+            <div class="form-check">
+              <input :name="`stock_product[stock_product_image_props_attributes][${index}][published]`" type="hidden" value="0">
+              <input type="checkbox" v-model="spip.published" :name="`stock_product[stock_product_image_props_attributes][${index}][published]`" :id="`stock_product_stock_product_image_props_attributes_${index}_published`" class="form-check-input boolean optional">
+              <label :for="`stock_product_stock_product_image_props_attributes_${index}_published`" class="form-check-label boolean optional">
+                公開</label>
+            </div>
+          </fieldset>
+          <fieldset class="form-group boolean optional stock_product_stock_product_image_props_charterable">
+            <div v-if="spip.charterable || !charter" class="form-check">
+              <input :name="`stock_product[stock_product_image_props_attributes][${index}][charterable]`" type="hidden" value="0">
+              <input type="checkbox" v-model="spip.charterable" :name="`stock_product[stock_product_image_props_attributes][${index}][charterable]`" :id="`stock_product_stock_product_image_props_attributes_${index}_charterable`" class="form-check-input boolean optional" :disabled="spip.charterable">
+              <label :for="`stock_product_stock_product_image_props_attributes_${index}_charterable`" class="form-check-label boolean optional">
+                提供</label>
+              <input v-model="spip.charterable" v-if="spip.charterable" :name="`stock_product[stock_product_image_props_attributes][${index}][id]`" type="hidden">
+            </div>
+          </fieldset>
+        </div>
+        <div class="col-md-2">
+          <input v-model="spip._destroy" type="hidden" :name="`stock_product[stock_product_image_props_attributes][${index}][_destroy]`" :id="`stock_product_stock_product_image_props_attributes_${index}__destroy`">
+          <a href="javascript:void(0);" class="btn btn-danger dynamic" @click="removeImageProp(spip, index)">削除</a>
+        </div>
+        <input v-model="spip.id" :name="`stock_product[stock_product_image_props_attributes][${index}][id]`" type="hidden">
+      </div>
       <div class="links">
-        <%= link_to_add_association '画像ファイル追加', f, :stock_product_image_props, partial: 'stock_products/stock_product_image_prop_fields', class: 'btn btn-secondary' %>
+        <a href="javascript:void(0);" class="btn btn-secondary" @click="addImageProp">画像追加</a>
       </div>
     </div>
     <br>
@@ -138,6 +183,7 @@ var app = new Vue({
   el: '#app',
   data() {
     data = {
+      charter: <%= raw (@stock_product.stock_product ? 'true' : 'false') %>,
       stock_product_text_props: <%= raw @stock_product.stock_product_text_props.to_json %>,
       stock_product_file_props: <%= raw @stock_product.stock_product_file_props.to_json %>,
       stock_product_image_props: <%= raw @stock_product.stock_product_image_props.to_json %>,
@@ -176,7 +222,70 @@ var app = new Vue({
       } else {
         this.stock_product_text_props.splice(index, 1)
       }
-    }
+    },
+    addFileProp() {
+      this.stock_product_file_props.push(
+        {
+          id: null,
+          published: false,
+          charterable: false,
+          stored_prop: {
+            id: null,
+            name: '',
+            url: '',
+            file_name: '',
+            file: null,
+          }
+        }
+      )
+    },
+    removeFileProp(stock_product_file_prop, index) {
+      if (stock_product_file_prop.id) {
+        stock_product_file_prop._destroy = true
+      } else {
+        this.stock_product_file_props.splice(index, 1)
+      }
+    },
+    addImageProp() {
+      this.stock_product_image_props.push(
+        {
+          id: null,
+          published: false,
+          charterable: false,
+          stored_prop: {
+            id: null,
+            name: '',
+            url: '',
+            file_name: '',
+            image: null,
+          }
+        }
+      )
+    },
+    removeImageProp(stock_product_image_prop, index) {
+      if (stock_product_image_prop.id) {
+        stock_product_image_prop._destroy = true
+      } else {
+        this.stock_product_image_props.splice(index, 1)
+      }
+    },
+    displayFileName(prop) {
+      if (prop.stored_prop.file_name) {
+        return prop.stored_prop.file_name
+      }
+      return ''
+    },
+    uploadFile(prop, index) {
+      $(`#file_prop_file_${index}`).click()
+    },
+    onFileChange(event, prop, index) {
+      const target = event.target
+      const file = target.files[0]
+      prop.stored_prop.file_name = file.name
+    },
+    uploadImage(prop, index) {
+      $(`#image_prop_image_${index}`).click()
+    },
   }
 })
 </script>
